Done : Admin Graph and stock

--- a/starter2.html
+++ b/starter2.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
-    
-    <script src="test.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> 
+
+
+    <lottie-player src="https://lottie.host/95ecb93e-f152-4114-b078-77fe7ceb7749/nfkzEpbkO3.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
 </body>
 
 </html>
